Bug 485669 - Drkonqi crashes while generating the backtrace
Summary: Drkonqi crashes while generating the backtrace
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-17 10:42 UTC by Patrick Silva
Modified: 2024-05-03 11:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2024-04-17 10:42:12 UTC
SUMMARY
The title says it all.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 6.0.80
KDE Frameworks Version: 6.2.0
Qt Version: 6.7.0
Graphics Platform: Wayland


Thread 11 (Thread 0x715756600640 (LWP 6884)):
#0  __futex_abstimed_wait_common64 (private=0, cancel=true, abstime=0x0, op=393, expected=0, futex_word=0x5e14291b3834) at ./nptl/futex-internal.c:57
#1  __futex_abstimed_wait_common (cancel=true, private=0, abstime=0x0, clockid=0, expected=0, futex_word=0x5e14291b3834) at ./nptl/futex-internal.c:87
#2  __GI___futex_abstimed_wait_cancelable64 (futex_word=futex_word@entry=0x5e14291b3834, expected=expected@entry=0, clockid=clockid@entry=0, abstime=abstime@entry=0x0, private=private@entry=0) at ./nptl/futex-internal.c:139
#3  0x0000715787893a41 in __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x5e14291b37e0, cond=0x5e14291b3808) at ./nptl/pthread_cond_wait.c:503
#4  ___pthread_cond_wait (cond=0x5e14291b3808, mutex=0x5e14291b37e0) at ./nptl/pthread_cond_wait.c:627
#5  0x00007157883896bb in QWaitConditionPrivate::wait (deadline=..., this=0x5e14291b37e0) at ./src/corelib/thread/qwaitcondition_unix.cpp:102
#6  QWaitCondition::wait (this=this@entry=0x5e1429665ca0, mutex=mutex@entry=0x5e1429665c98, deadline=...) at ./src/corelib/thread/qwaitcondition_unix.cpp:180
#7  0x00007157829bb576 in QSGRenderThreadEventQueue::takeEvent (wait=true, this=0x5e1429665c80) at ./src/quick/scenegraph/qsgthreadedrenderloop.cpp:197
#8  QSGRenderThread::processEventsAndWaitForMore (this=0x5e1429665be0) at ./src/quick/scenegraph/qsgthreadedrenderloop.cpp:868
#9  QSGRenderThread::run (this=0x5e1429665be0) at ./src/quick/scenegraph/qsgthreadedrenderloop.cpp:991
#10 0x0000715788383c9d in operator() (__closure=<optimized out>) at ./src/corelib/thread/qthread_unix.cpp:326
#11 (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at ./src/corelib/thread/qthread_unix.cpp:262
#12 QThreadPrivate::start (arg=0x5e1429665be0) at ./src/corelib/thread/qthread_unix.cpp:285
#13 0x0000715787894ac3 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
#14 0x0000715787926850 in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81

Thread 10 (Thread 0x715779200640 (LWP 6866)):
#0  syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
#1  0x0000715788386d56 in QtLinuxFutex::_q_futex (val3=0, addr2=0x0, val2=0, val=<optimized out>, op=0, addr=<optimized out>) at ./src/corelib/thread/qfutex_linux_p.h:48
#2  QtLinuxFutex::futexWait<QBasicAtomicInteger<unsigned int> > (expectedValue=<optimized out>, futex=...) at ./src/corelib/thread/qfutex_linux_p.h:67
#3  futexSemaphoreTryAcquire_loop<false> (timer=..., nn=8589934593, curValue=<optimized out>, u=...) at ./src/corelib/thread/qsemaphore.cpp:174
#4  futexSemaphoreTryAcquire<QDeadlineTimer::ForeverConstant> (timeout=QDeadlineTimer::ForeverConstant::Forever, n=1, u=...) at ./src/corelib/thread/qsemaphore.cpp:239
#5  QSemaphore::acquire (this=this@entry=0x7157887fe600 <_ZN14QtGlobalStatic17ApplicationHolderIN12_GLOBAL__N_121Q_QAS_libProxyWrapperEE7storageE.lto_priv.0+32>, n=n@entry=1) at ./src/corelib/thread/qsemaphore.cpp:327
#6  0x00007157886f4994 in QLibProxyWrapper::run (this=0x7157887fe5e0 <_ZN14QtGlobalStatic17ApplicationHolderIN12_GLOBAL__N_121Q_QAS_libProxyWrapperEE7storageE.lto_priv.0>) at ./src/network/kernel/qnetworkproxy_libproxy.cpp:146
#7  0x0000715788383c9d in operator() (__closure=<optimized out>) at ./src/corelib/thread/qthread_unix.cpp:326
#8  (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at ./src/corelib/thread/qthread_unix.cpp:262
#9  QThreadPrivate::start (arg=0x7157887fe5e0 <_ZN14QtGlobalStatic17ApplicationHolderIN12_GLOBAL__N_121Q_QAS_libProxyWrapperEE7storageE.lto_priv.0>) at ./src/corelib/thread/qthread_unix.cpp:285
#10 0x0000715787894ac3 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
#11 0x0000715787926850 in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81

Thread 9 (Thread 0x715779c00640 (LWP 6865)):
#0  __GI___libc_read (nbytes=16, buf=0x715779bff890, fd=25) at ../sysdeps/unix/sysv/linux/read.c:26
#1  __GI___libc_read (fd=25, buf=buf@entry=0x715779bff890, nbytes=nbytes@entry=16) at ../sysdeps/unix/sysv/linux/read.c:24
#2  0x0000715787635134 in read (__nbytes=16, __buf=0x715779bff890, __fd=<optimized out>) at /usr/include/x86_64-linux-gnu/bits/unistd.h:38
#3  g_wakeup_acknowledge (wakeup=0x5e1429108c90) at ../../../glib/gwakeup.c:210
#4  g_main_context_check (context=0x71575c000c60, max_priority=2147483647, fds=0x71575c005060, n_fds=1) at ../../../glib/gmain.c:3965
#5  0x000071578768a19d in g_main_context_iterate.constprop.0 (context=context@entry=0x71575c000c60, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../../../glib/gmain.c:4210
#6  0x00007157876323e3 in g_main_context_iteration (context=0x71575c000c60, may_block=1) at ../../../glib/gmain.c:4278
#7  0x0000715788276591 in QEventDispatcherGlib::processEvents (this=0x71575c000b70, flags=...) at ./src/corelib/kernel/qeventdispatcher_glib.cpp:396
#8  0x00007157884a3e3b in QEventLoop::exec (this=0x715779bffa60, flags=...) at ./src/corelib/global/qflags.h:34
#9  0x00007157883bcf48 in QThread::exec (this=<optimized out>) at ./src/corelib/global/qflags.h:74
#10 0x0000715788383c9d in operator() (__closure=<optimized out>) at ./src/corelib/thread/qthread_unix.cpp:326
#11 (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at ./src/corelib/thread/qthread_unix.cpp:262
#12 QThreadPrivate::start (arg=0x5e14292d3fb0) at ./src/corelib/thread/qthread_unix.cpp:285
#13 0x0000715787894ac3 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
#14 0x0000715787926850 in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81

Thread 8 (Thread 0x715783800640 (LWP 6858)):
#0  socketNotifierSourceCheck (source=source@entry=0x71577c005230) at ./src/corelib/kernel/qeventdispatcher_glib.cpp:42
#1  0x0000715787635038 in g_main_context_check (context=0x71577c001d20, max_priority=2147483647, fds=<optimized out>, n_fds=<optimized out>) at ../../../glib/gmain.c:4037
#2  0x000071578768a19d in g_main_context_iterate.constprop.0 (context=context@entry=0x71577c001d20, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../../../glib/gmain.c:4210
#3  0x00007157876323e3 in g_main_context_iteration (context=0x71577c001d20, may_block=1) at ../../../glib/gmain.c:4278
#4  0x0000715788276591 in QEventDispatcherGlib::processEvents (this=0x71577c000b70, flags=...) at ./src/corelib/kernel/qeventdispatcher_glib.cpp:396
#5  0x00007157884a3e3b in QEventLoop::exec (this=0x7157837ffa10, flags=...) at ./src/corelib/global/qflags.h:34
#6  0x00007157883bcf48 in QThread::exec (this=this@entry=0x715789a1d3e0 <QGlobalStatic<QtGlobalStatic::Holder<(anonymous namespace)::Q_QGS__q_manager> >::instance()::holder>) at ./src/corelib/global/qflags.h:74
#7  0x0000715789a0050e in QDBusConnectionManager::run (this=0x715789a1d3e0 <QGlobalStatic<QtGlobalStatic::Holder<(anonymous namespace)::Q_QGS__q_manager> >::instance()::holder>) at ./src/dbus/qdbusconnectionmanager.cpp:144
#8  0x0000715788383c9d in operator() (__closure=<optimized out>) at ./src/corelib/thread/qthread_unix.cpp:326
#9  (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at ./src/corelib/thread/qthread_unix.cpp:262
#10 QThreadPrivate::start (arg=0x715789a1d3e0 <QGlobalStatic<QtGlobalStatic::Holder<(anonymous namespace)::Q_QGS__q_manager> >::instance()::holder>) at ./src/corelib/thread/qthread_unix.cpp:285
#11 0x0000715787894ac3 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
#12 0x0000715787926850 in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81

Thread 7 (Thread 0x71574aa00640 (LWP 6889)):
#0  __futex_abstimed_wait_common64 (private=0, cancel=true, abstime=0x0, op=393, expected=0, futex_word=0x7157400daa88) at ./nptl/futex-internal.c:57
#1  __futex_abstimed_wait_common (cancel=true, private=0, abstime=0x0, clockid=0, expected=0, futex_word=0x7157400daa88) at ./nptl/futex-internal.c:87
#2  __GI___futex_abstimed_wait_cancelable64 (futex_word=futex_word@entry=0x7157400daa88, expected=expected@entry=0, clockid=clockid@entry=0, abstime=abstime@entry=0x0, private=private@entry=0) at ./nptl/futex-internal.c:139
#3  0x0000715787893a41 in __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x7157400daa38, cond=0x7157400daa60) at ./nptl/pthread_cond_wait.c:503
#4  ___pthread_cond_wait (cond=0x7157400daa60, mutex=0x7157400daa38) at ./nptl/pthread_cond_wait.c:627
#5  0x0000715779f1952d in cnd_wait (cond=<optimized out>, mtx=<optimized out>) at ../src/c11/impl/threads_posix.c:135
#6  0x0000715779ec98bb in util_queue_thread_func (input=input@entry=0x71574010eb00) at ../src/util/u_queue.c:290
#7  0x0000715779f1945b in impl_thrd_routine (p=<optimized out>) at ../src/c11/impl/threads_posix.c:67
#8  0x0000715787894ac3 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
#9  0x0000715787926850 in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81

Thread 6 (Thread 0x71574b400640 (LWP 6888)):
#0  __futex_abstimed_wait_common64 (private=0, cancel=true, abstime=0x0, op=393, expected=0, futex_word=0x715740027168) at ./nptl/futex-internal.c:57
#1  __futex_abstimed_wait_common (cancel=true, private=0, abstime=0x0, clockid=0, expected=0, futex_word=0x715740027168) at ./nptl/futex-internal.c:87
#2  __GI___futex_abstimed_wait_cancelable64 (futex_word=futex_word@entry=0x715740027168, expected=expected@entry=0, clockid=clockid@entry=0, abstime=abstime@entry=0x0, private=private@entry=0) at ./nptl/futex-internal.c:139
#3  0x0000715787893a41 in __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x715740027118, cond=0x715740027140) at ./nptl/pthread_cond_wait.c:503
#4  ___pthread_cond_wait (cond=0x715740027140, mutex=0x715740027118) at ./nptl/pthread_cond_wait.c:627
#5  0x0000715779f1952d in cnd_wait (cond=<optimized out>, mtx=<optimized out>) at ../src/c11/impl/threads_posix.c:135
#6  0x0000715779ec98bb in util_queue_thread_func (input=input@entry=0x71574005b1e0) at ../src/util/u_queue.c:290
#7  0x0000715779f1945b in impl_thrd_routine (p=<optimized out>) at ../src/c11/impl/threads_posix.c:67
#8  0x0000715787894ac3 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
#9  0x0000715787926850 in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81

Thread 5 (Thread 0x715780a00640 (LWP 6861)):
#0  __futex_abstimed_wait_common64 (private=0, cancel=true, abstime=0x0, op=393, expected=0, futex_word=0x5e14290f4890) at ./nptl/futex-internal.c:57
#1  __futex_abstimed_wait_common (cancel=true, private=0, abstime=0x0, clockid=0, expected=0, futex_word=0x5e14290f4890) at ./nptl/futex-internal.c:87
#2  __GI___futex_abstimed_wait_cancelable64 (futex_word=futex_word@entry=0x5e14290f4890, expected=expected@entry=0, clockid=clockid@entry=0, abstime=abstime@entry=0x0, private=private@entry=0) at ./nptl/futex-internal.c:139
#3  0x0000715787893a41 in __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x5e14290f4840, cond=0x5e14290f4868) at ./nptl/pthread_cond_wait.c:503
#4  ___pthread_cond_wait (cond=0x5e14290f4868, mutex=0x5e14290f4840) at ./nptl/pthread_cond_wait.c:627
#5  0x0000715779f1952d in cnd_wait (cond=<optimized out>, mtx=<optimized out>) at ../src/c11/impl/threads_posix.c:135
#6  0x0000715779ec98bb in util_queue_thread_func (input=input@entry=0x5e14290ed150) at ../src/util/u_queue.c:290
#7  0x0000715779f1945b in impl_thrd_routine (p=<optimized out>) at ../src/c11/impl/threads_posix.c:67
#8  0x0000715787894ac3 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
#9  0x0000715787926850 in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81

Thread 4 (Thread 0x715781600640 (LWP 6860)):
#0  0x0000715787918bcf in __GI___poll (fds=fds@entry=0x7157815ffa50, nfds=nfds@entry=2, timeout=timeout@entry=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007157843b6481 in poll (__timeout=-1, __nfds=2, __fds=0x7157815ffa50) at /usr/include/x86_64-linux-gnu/bits/poll2.h:39
#2  QtWaylandClient::EventThread::run (this=0x5e1428fcb730) at ./src/client/qwaylanddisplay.cpp:182
#3  0x0000715788383c9d in operator() (__closure=<optimized out>) at ./src/corelib/thread/qthread_unix.cpp:326
#4  (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at ./src/corelib/thread/qthread_unix.cpp:262
#5  QThreadPrivate::start (arg=0x5e1428fcb730) at ./src/corelib/thread/qthread_unix.cpp:285
#6  0x0000715787894ac3 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
#7  0x0000715787926850 in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81

Thread 3 (Thread 0x715763e00640 (LWP 6879)):
#0  0x0000715787683a9d in g_mutex_lock (mutex=mutex@entry=0x71574c003000) at ../../../glib/gthread-posix.c:1516
#1  0x000071578768a0f8 in g_main_context_iterate.constprop.0 (context=context@entry=0x71574c003000, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../../../glib/gmain.c:4180
#2  0x00007157876323e3 in g_main_context_iteration (context=0x71574c003000, may_block=1) at ../../../glib/gmain.c:4278
#3  0x0000715788276591 in QEventDispatcherGlib::processEvents (this=0x71574c002690, flags=...) at ./src/corelib/kernel/qeventdispatcher_glib.cpp:396
#4  0x00007157884a3e3b in QEventLoop::exec (this=0x715763dffa60, flags=...) at ./src/corelib/global/qflags.h:34
#5  0x00007157883bcf48 in QThread::exec (this=<optimized out>) at ./src/corelib/global/qflags.h:74
#6  0x0000715788383c9d in operator() (__closure=<optimized out>) at ./src/corelib/thread/qthread_unix.cpp:326
#7  (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at ./src/corelib/thread/qthread_unix.cpp:262
#8  QThreadPrivate::start (arg=0x5e14296414b0) at ./src/corelib/thread/qthread_unix.cpp:285
#9  0x0000715787894ac3 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
#10 0x0000715787926850 in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81

Thread 2 (Thread 0x715782000640 (LWP 6859)):
#0  syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
#1  0x000071578837ebad in QtLinuxFutex::_q_futex (val3=0, addr2=0x0, val2=0, val=3, op=0, addr=0x5e1428fb6938) at ./src/corelib/thread/qfutex_linux_p.h:48
#2  QtLinuxFutex::futexWait<QBasicAtomicPointer<QMutexPrivate> > (expectedValue=0x3, futex=...) at ./src/corelib/thread/qfutex_linux_p.h:67
#3  QBasicMutex::lockInternal (this=0x5e1428fb6938) at ./src/corelib/thread/qmutex.cpp:647
#4  0x00007157884a1d28 in QBasicMutex::lock (this=0x5e1428fb6938) at ./src/corelib/thread/qmutex.h:41
#5  std::unique_lock<QMutex>::lock (this=<synthetic pointer>) at /usr/include/c++/12/bits/unique_lock.h:139
#6  std::unique_lock<QMutex>::unique_lock (__m=..., this=<synthetic pointer>) at /usr/include/c++/12/bits/unique_lock.h:69
#7  (anonymous namespace)::qt_unique_lock<QMutex> (mutex=...) at ./src/corelib/thread/qlocking_p.h:66
#8  QCoreApplicationPrivate::lockThreadPostEventList (object=object@entry=0x5e1428fbedb0) at ./src/corelib/kernel/qcoreapplication.cpp:1615
#9  0x00007157884a1e3b in QCoreApplication::postEvent (receiver=0x5e1428fbedb0, event=0x71577400af70, priority=0) at ./src/corelib/kernel/qcoreapplication.cpp:1664
#10 0x0000715788409257 in queued_activate (sender=<optimized out>, signal=<optimized out>, c=0x5e142902a1a0, argv=0x715781fff9d8) at ./src/corelib/kernel/qobject.cpp:3954
#11 0x0000715788463668 in doActivate<false> (sender=0x5e142907f930, signal_index=5, argv=0x715781fff9d8) at ./src/corelib/kernel/qobject.cpp:4038
#12 0x00007157843b63d1 in QtWaylandClient::EventThread::needReadAndDispatch (this=0x5e142907f930) at ./obj-x86_64-linux-gnu/src/client/WaylandClient_autogen/include/qwaylanddisplay.moc:151
#13 QtWaylandClient::EventThread::waitForReading (this=0x5e142907f930) at ./src/client/qwaylanddisplay.cpp:210
#14 QtWaylandClient::EventThread::run (this=0x5e142907f930) at ./src/client/qwaylanddisplay.cpp:177
#15 0x0000715788383c9d in operator() (__closure=<optimized out>) at ./src/corelib/thread/qthread_unix.cpp:326
#16 (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at ./src/corelib/thread/qthread_unix.cpp:262
#17 QThreadPrivate::start (arg=0x5e142907f930) at ./src/corelib/thread/qthread_unix.cpp:285
#18 0x0000715787894ac3 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
#19 0x0000715787926850 in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81

Thread 1 (Thread 0x7157848f1540 (LWP 6857)):
#0  __pthread_kill_implementation (no_tid=0, signo=11, threadid=124620700063040) at ./nptl/pthread_kill.c:44
#1  __pthread_kill_internal (signo=11, threadid=124620700063040) at ./nptl/pthread_kill.c:78
#2  __GI___pthread_kill (threadid=124620700063040, signo=signo@entry=11) at ./nptl/pthread_kill.c:89
#3  0x0000715787842476 in __GI_raise (sig=11) at ../sysdeps/posix/raise.c:26
#4  0x000071578a6bc8c2 in KCrash::defaultCrashHandler (sig=11) at ./src/kcrash.cpp:641
#5  <signal handler called>
#6  QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::get (this=<optimized out>, this=<optimized out>) at ./src/corelib/tools/qscopedpointer.h:110
#7  qGetPtrHelper<QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> > > (ptr=..., ptr=...) at ./src/corelib/global/qtclasshelpermacros.h:79
#8  QObject::d_func (this=0x0) at ./src/corelib/kernel/qobject.h:107
#9  QObject::deleteLater (this=0x0) at ./src/corelib/kernel/qobject.cpp:2456
#10 0x00005e14276e4648 in BacktraceGenerator::slotProcessExited (this=0x5e1429118340, exitCode=6, exitStatus=QProcess::CrashExit) at ./src/backtracegenerator.cpp:136
#11 0x000071578846355e in QtPrivate::QSlotObjectBase::call (a=<optimized out>, r=<optimized out>, this=<optimized out>, this=<optimized out>, r=<optimized out>, a=<optimized out>) at ./src/corelib/kernel/qobjectdefs_impl.h:469
#12 doActivate<false> (sender=0x5e1429568400, signal_index=10, argv=0x7ffde5838e40) at ./src/corelib/kernel/qobject.cpp:4078
#13 0x00007157882ed54c in QProcess::finished (this=<optimized out>, _t1=<optimized out>, _t2=<optimized out>) at ./obj-x86_64-linux-gnu/src/corelib/Core_autogen/include/moc_qprocess.cpp:346
#14 0x000071578846383b in doActivate<false> (sender=0x5e142915d0a0, signal_index=3, argv=0x7ffde5838f50) at ./src/corelib/kernel/qobject.cpp:4090
#15 0x000071578840e653 in QSocketNotifier::activated (this=this@entry=0x5e142915d0a0, _t1=..., _t2=<optimized out>, _t3=...) at ./obj-x86_64-linux-gnu/src/corelib/Core_autogen/include/moc_qsocketnotifier.cpp:195
#16 0x0000715788413096 in QSocketNotifier::event (this=0x5e142915d0a0, e=<optimized out>) at ./src/corelib/kernel/qsocketnotifier.cpp:327
#17 0x000071578980992b in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x5e142915d0a0, e=0x7ffde5839090) at ./src/widgets/kernel/qapplication.cpp:3287
#18 0x00007157884a1c38 in QCoreApplication::notifyInternal2 (receiver=0x5e142915d0a0, event=0x7ffde5839090) at ./src/corelib/kernel/qcoreapplication.cpp:1134
#19 0x0000715788275454 in socketNotifierSourceDispatch (source=0x5e1429045440) at ./src/corelib/kernel/qeventdispatcher_glib.cpp:75
#20 0x0000715787634d3b in g_main_dispatch (context=0x71577c005040) at ../../../glib/gmain.c:3419
#21 g_main_context_dispatch (context=0x71577c005040) at ../../../glib/gmain.c:4137
#22 0x000071578768a258 in g_main_context_iterate.constprop.0 (context=context@entry=0x71577c005040, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../../../glib/gmain.c:4213
#23 0x00007157876323e3 in g_main_context_iteration (context=0x71577c005040, may_block=1) at ../../../glib/gmain.c:4278
#24 0x0000715788276591 in QEventDispatcherGlib::processEvents (this=0x5e1428fb9a30, flags=...) at ./src/corelib/kernel/qeventdispatcher_glib.cpp:396
#25 0x00007157884a3e3b in QEventLoop::exec (this=this@entry=0x7ffde58392c0, flags=..., flags@entry=...) at ./src/corelib/global/qflags.h:34
#26 0x00007157884a5a6c in QCoreApplication::exec () at ./src/corelib/global/qflags.h:74
#27 0x0000715788ae4330 in QGuiApplication::exec () at ./src/gui/kernel/qguiapplication.cpp:1926
#28 0x00007157898078d9 in QApplication::exec () at ./src/widgets/kernel/qapplication.cpp:2555
#29 0x00005e14276d5b92 in main (argc=<optimized out>, argv=<optimized out>) at ./src/main.cpp:290
Comment 1 Harald Sitter 2024-04-18 09:22:19 UTC
The relevant line

    m_proc->deleteLater();

I am not sure how m_proc can be 0x0 though. It's where this signal originates 🤷
Comment 2 Bug Janitor Service 2024-04-18 09:34:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/drkonqi/-/merge_requests/234
Comment 3 Harald Sitter 2024-05-03 11:37:40 UTC
Git commit 8f4a57a6626d6fbc801a049d9ddcab5ff81b98b2 by Harald Sitter.
Committed on 03/05/2024 at 11:35.
Pushed by sitter into branch 'master'.

backtracegenerator: don't crash when the debugger crashes

when the debugger crashes slotOnErrorOccurred runs before
slotProcessExited and causes the latter to trip over the
since-nullpointered members. instead guard the delete operations against
nullptrs. this is done in both functions to increase reliablity even
though technically it's only needed in slotProcessExited

M  +16   -8    src/backtracegenerator.cpp

https://invent.kde.org/plasma/drkonqi/-/commit/8f4a57a6626d6fbc801a049d9ddcab5ff81b98b2
Comment 4 Harald Sitter 2024-05-03 11:41:00 UTC
Git commit 1011f4addc90459e110eaa3f59d2f18ec0cde0fc by Harald Sitter.
Committed on 03/05/2024 at 11:38.
Pushed by sitter into branch 'Plasma/6.0'.

backtracegenerator: don't crash when the debugger crashes

when the debugger crashes slotOnErrorOccurred runs before
slotProcessExited and causes the latter to trip over the
since-nullpointered members. instead guard the delete operations against
nullptrs. this is done in both functions to increase reliablity even
though technically it's only needed in slotProcessExited
(cherry picked from commit 8f4a57a6626d6fbc801a049d9ddcab5ff81b98b2)

M  +16   -8    src/backtracegenerator.cpp

https://invent.kde.org/plasma/drkonqi/-/commit/1011f4addc90459e110eaa3f59d2f18ec0cde0fc