backtracegenerator: don't crash when the debugger crashes

when the debugger crashes slotOnErrorOccurred runs before
slotProcessExited and causes the latter to trip over the
since-nullpointered members. instead guard the delete operations against
nullptrs. this is done in both functions to increase reliablity even
though technically it's only needed in slotProcessExited

BUG: 485669